@@ -1,5 +1,6 @@
 Version 3.1:
 
+* Fix layout issues caused by floats not being acceptedby pyqt5 any more.
 * Fix loading WHDLoad .lha archives on Windows.
 * Some changes to how/where plugins are found.
 * Build system update.
